--- a/Views/Home/SelectPaquete.cshtml
+++ b/Views/Home/SelectPaquete.cshtml
@@ -1,23 +1,22 @@
 @{
     ViewData["Title"] = "Select Paquete";
 }
-<form action=@Url.Action("GuardarPaquete")>
-    @for(int i =0;i<ViewBag.ListaDestinos.Count;i++)
-    {
-        <select name="destino">
-            <option>@ViewBag.ListaDestinos[i]</option>
-        </select>
-    }
-    <input type="number" name="destinoElegido"><br><br>
-    @for(int i =0;i<ViewBag.ListaHoteles.Count;i++)
-    {
-        <input type="radio" name="hoteles" value="imagen[i]"><img src="img/hoteles/@ViewBag.ListaHoteles[i]" width=6px height=auto>
-    }
-    @foreach(string aereo in ViewBag.ListaAereos){
-        <input type="radio" name="aereos" value="imagen[aereo]"><img src="img/aerolineas/@ViewBag.ListaAereos[aereo]" width=6px height=auto>
-    }
-    @foreach(string excursion in ViewBag.ListaExcursiones){
-        <input type="radio" name="excursion" value="imagen[excursion]"><img src="img/excursiones/@ViewBag.ListaExcursiones[excursion]" width=6px height=auto>
-    }
+<form action='@Url.Action("GuardarPaquete")'>
+    <select name="destino">
+    @foreach(string destino in ViewBag.Destinos){
+            <option>@destino</option>
+    }</select><br><br>
+    <h2>Hoteles:</h2>
+    @foreach(string hotel in ViewBag.Hoteles){
+        <label><input type="radio" name="hotel" value="@hotel" checked><img src="~/img/hoteles/@hotel" width=200px height=auto></label>
+    }<br><br>
+    <h2>Aerolineas:</h2>
+    @foreach(string aereo in ViewBag.Aerolineas){
+        <input type="radio" name="aereo" value="@aereo" checked><img src="~/img/aerolineas/@aereo" width=200px height=auto>
+    }<br><br>
+    <h2>Excursiones:</h2>
+    @foreach(string excursion in ViewBag.Excursiones){
+        <input type="radio" name="excursion" value="@excursion" checked><img src="~/img/excursiones/@excursion" width=200px height=auto>
+    }<br><br>
     <input type="submit" value="Crear Paquete">
 </form>
