--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -16,3 +16,30 @@ html {
 body {
   margin-bottom: 60px;
 }
+div{
+  
+}
+.newpaquete{
+  border: 3px solid grey;
+  margin: 15px;
+  padding: 15px;
+}
+div img{
+  height: 160px;
+  width: 260px;
+  padding: 5px;
+}
+[type=radio] { 
+  position: absolute;
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+[type=radio] + img {
+  cursor: pointer;
+}
+
+[type=radio]:checked + img {
+  outline: 2px solid #f00;
+}
